unpackaged/main/default/objects/Product__c/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <description>Point of Contact&#39;s Phone Number at the Sponsor.</description>
    <formula>Sponsor__r.Point_of_Contact_Phone_Number__c</formula>
    <label>Phone Number</label>
    <type>Text</type>
</CustomField>