unpackaged/main/default/objects/Product__c/fields/Platform_Availability__c.field-meta.xml
<CustomField>
    <fullName>Platform_Availability__c</fullName>
    <label>Platform Availability</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BD Only</fullName>
            </value>
            <value>
                <fullName>RIA Only</fullName>
            </value>
            <value>
                <fullName>BD &amp; RIA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>