unpackaged/main/default/objects/Product__c/fields/Platform_Availability_Blank__c.field-meta.xml
<CustomField>
    <fullName>Platform_Availability_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Platform_Availability__c))</formula>
    <label>Platform Availability Blank</label>
    <type>Checkbox</type>
</CustomField>