unpackaged/main/default/objects/Product__c/fields/PPM_Date__c.field-meta.xml
<CustomField>
    <fullName>PPM_Date__c</fullName>
    <label>PPM Date</label>
    <type>Date</type>
</CustomField>