unpackaged/main/default/objects/Product__c/fields/PPM_Date_Blank__c.field-meta.xml
<CustomField>
    <fullName>PPM_Date_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(PPM_Date__c)</formula>
    <label>PPM Date Blank</label>
    <type>Checkbox</type>
</CustomField>