unpackaged/main/default/objects/Product__c/fields/PPM_Projected_Distribution__c.field-meta.xml
<CustomField>
    <fullName>PPM_Projected_Distribution__c</fullName>
    <label>PPM Projected Distribution</label>
    <type>TextArea</type>
</CustomField>