unpackaged/main/default/objects/Product__c/fields/Preferred_Return_Hurdle_Rate__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Return_Hurdle_Rate__c</fullName>
    <label>Preferred Return / Hurdle Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>