unpackaged/main/default/objects/Product__c/fields/Preferred_Return_Hurdle_Rate_Blank__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Return_Hurdle_Rate_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Preferred_Return_Hurdle_Rate__c)</formula>
    <label>Preferred Return/Hurdle Rate Blank</label>
    <type>Checkbox</type>
</CustomField>