unpackaged/main/default/objects/Product__c/fields/Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_ID__c</fullName>
    <label>Product ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>