unpackaged/main/default/objects/Product__c/fields/Product_Maestro_ID__c.field-meta.xml
<CustomField>
    <fullName>Product_Maestro_ID__c</fullName>
    <displayFormat>P-{00000000}</displayFormat>
    <label>Product Code</label>
    <type>AutoNumber</type>
</CustomField>