unpackaged/main/default/objects/Product__c/fields/Product_Type_Platform__c.field-meta.xml
<CustomField>
    <fullName>Product_Type_Platform__c</fullName>
    <label>Product Type/Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advisor Managed Solutions (AMS)</fullName>
            </value>
            <value>
                <fullName>Alternative Managed Solutions (AltMS)</fullName>
            </value>
            <value>
                <fullName>AMS Plus (AMS+)</fullName>
            </value>
            <value>
                <fullName>BDC</fullName>
            </value>
            <value>
                <fullName>Brokerage Account</fullName>
            </value>
            <value>
                <fullName>Courtesy Account</fullName>
            </value>
            <value>
                <fullName>Custodian</fullName>
            </value>
            <value>
                <fullName>DFPG Managed Solutions (DMS)</fullName>
            </value>
            <value>
                <fullName>DST</fullName>
            </value>
            <value>
                <fullName>Energy</fullName>
            </value>
            <value>
                <fullName>Fixed Annuity</fullName>
            </value>
            <value>
                <fullName>Indexed Annuity</fullName>
            </value>
            <value>
                <fullName>Interval Fund</fullName>
            </value>
            <value>
                <fullName>LLC Program</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>Outside Managed Solutions (OMS)</fullName>
            </value>
            <value>
                <fullName>Private Credit</fullName>
            </value>
            <value>
                <fullName>Private Equity</fullName>
            </value>
            <value>
                <fullName>Public Non-Traded Fund</fullName>
            </value>
            <value>
                <fullName>Real Estate Fund</fullName>
            </value>
            <value>
                <fullName>REIT</fullName>
            </value>
            <value>
                <fullName>Secondary Market</fullName>
            </value>
            <value>
                <fullName>Securitized Real Estate</fullName>
            </value>
            <value>
                <fullName>Services Agreement</fullName>
            </value>
            <value>
                <fullName>Single Premium Immediate Annuity (SPIA)</fullName>
            </value>
            <value>
                <fullName>Unified Managed Solutions (UMS)</fullName>
            </value>
            <value>
                <fullName>Variable Annuity</fullName>
            </value>
            <value>
                <fullName>Variable Universal Life</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>