unpackaged/main/default/objects/Product__c/fields/Property_Management_Fee__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Fee__c</fullName>
    <label>Property Management Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>