unpackaged/main/default/objects/Product__c/fields/Property_Management_Fee_Blank__c.field-meta.xml
<CustomField>
    <fullName>Property_Management_Fee_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Property_Management_Fee__c)</formula>
    <label>Property Management Fee Blank</label>
    <type>Checkbox</type>
</CustomField>