unpackaged/main/default/objects/Product__c/fields/Redemption_Cap__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Cap__c</fullName>
    <label>Redemption Cap</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>