unpackaged/main/default/objects/Product__c/fields/Redemption_Cap_Blank__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Cap_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Redemption_Cap__c)</formula>
    <label>Redemption Cap Blank</label>
    <type>Checkbox</type>
</CustomField>