unpackaged/main/default/objects/Product__c/fields/Redemption_Details__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Details__c</fullName>
    <label>Redemption Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>