unpackaged/main/default/objects/Product__c/fields/Redemption_Feature_Blank__c.field-meta.xml
<CustomField>
    <fullName>Redemption_Feature_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Redemption_Feature__c))</formula>
    <label>Redemption Feature Blank</label>
    <type>Checkbox</type>
</CustomField>