unpackaged/main/default/objects/Product__c/fields/Registration_Exemptions__c.field-meta.xml
<CustomField>
    <fullName>Registration_Exemptions__c</fullName>
    <label>Registration Exemptions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Reg. D - 506(b)</fullName>
            </value>
            <value>
                <fullName>Reg. D - 506(c)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>