unpackaged/main/default/objects/Product__c/fields/Registration_Exemptions_Blank__c.field-meta.xml
<CustomField>
    <fullName>Registration_Exemptions_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Registration_Exemptions__c))</formula>
    <label>Registration Exemptions Blank</label>
    <type>Checkbox</type>
</CustomField>