unpackaged/main/default/objects/Product__c/fields/Registration_Type__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type__c</fullName>
    <label>Registration Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Securities Act of 1933</fullName>
            </value>
            <value>
                <fullName>Investment Company Act of 1940</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>