unpackaged/main/default/objects/Product__c/fields/Registration_Type_Blank__c.field-meta.xml
<CustomField>
    <fullName>Registration_Type_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Registration_Type__c))</formula>
    <label>Registration Type Blank</label>
    <type>Checkbox</type>
</CustomField>