unpackaged/main/default/objects/Product__c/fields/Selling_Commissions__c.field-meta.xml
<CustomField>
    <fullName>Selling_Commissions__c</fullName>
    <label>Selling Commissions</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>