unpackaged/main/default/objects/Product__c/fields/Selling_Commissions_Blank__c.field-meta.xml
<CustomField>
    <fullName>Selling_Commissions_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Selling_Commissions__c)</formula>
    <label>Selling Commissions Blank</label>
    <type>Checkbox</type>
</CustomField>