unpackaged/main/default/objects/Product__c/fields/Senior_Housing__c.field-meta.xml
<CustomField>
    <fullName>Senior_Housing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Senior Housing</label>
    <type>Checkbox</type>
</CustomField>