unpackaged/main/default/objects/Product__c/fields/Single_Tenant_Office__c.field-meta.xml
<CustomField>
    <fullName>Single_Tenant_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single-Tenant Office</label>
    <type>Checkbox</type>
</CustomField>