unpackaged/main/default/objects/Product__c/fields/Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Sponsor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Sponsor</label>
    <referenceTo>Sponsor__c</referenceTo>
    <relationshipLabel>Products</relationshipLabel>
    <relationshipName>Products</relationshipName>
    <type>Lookup</type>
</CustomField>