unpackaged/main/default/objects/Product__c/fields/Sponsor_Co_Invest__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Co_Invest__c</fullName>
    <label>Sponsor Co-Invest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>