unpackaged/main/default/objects/Product__c/fields/Sponsor_Co_Invest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Co_Invest_Amount__c</fullName>
    <label>Sponsor Co-Invest Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>