unpackaged/main/default/objects/Product__c/fields/Sponsor_Co_Invest_Amount_Blank__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Co_Invest_Amount_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Sponsor_Co_Invest_Amount__c)</formula>
    <label>Sponsor Co-Invest Amount Blank</label>
    <type>Checkbox</type>
</CustomField>