unpackaged/main/default/objects/Product__c/fields/Sponsor_Co_Invest_Blank__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Co_Invest_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Sponsor_Co_Invest__c))</formula>
    <label>Sponsor Co-Invest Blank</label>
    <type>Checkbox</type>
</CustomField>