unpackaged/main/default/objects/Product__c/fields/Sponsor_Contact__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Contact__c</fullName>
    <label>Sponsor Contact</label>
    <type>TextArea</type>
</CustomField>