unpackaged/main/default/objects/Product__c/fields/Sponsor_Custodian__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Custodian__c</fullName>
    <label>Sponsor/Custodian</label>
    <length>255</length>
    <type>Text</type>
</CustomField>