unpackaged/main/default/objects/Product__c/fields/Sponsor_Website__c.field-meta.xml
<CustomField>
    <fullName>Sponsor_Website__c</fullName>
    <label>Sponsor Website</label>
    <type>Url</type>
</CustomField>