unpackaged/main/default/objects/Product__c/fields/Strategy_Allocation_Type__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Allocation_Type__c</fullName>
    <label>Strategy Allocation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>fixed-dollar</fullName>
            </value>
            <value>
                <fullName>fixed-percentage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>