unpackaged/main/default/objects/Product__c/fields/Strategy_Type__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Type__c</fullName>
    <label>Strategy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>Value-Add - Existing</fullName>
            </value>
            <value>
                <fullName>Stablized - Existing</fullName>
            </value>
            <value>
                <fullName>Value-Add - Existing &amp; Development</fullName>
            </value>
            <value>
                <fullName>Lending</fullName>
            </value>
            <value>
                <fullName>Diversified Middle-Market</fullName>
            </value>
            <value>
                <fullName>Sector Specific Middle Market</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>