unpackaged/main/default/objects/Product__c/fields/Strategy_Type_Blank__c.field-meta.xml
<CustomField>
    <fullName>Strategy_Type_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Strategy_Type__c))</formula>
    <label>Strategy Type Blank</label>
    <type>Checkbox</type>
</CustomField>