unpackaged/main/default/objects/Product__c/fields/Student_Housing__c.field-meta.xml
<CustomField>
    <fullName>Student_Housing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Student Housing</label>
    <type>Checkbox</type>
</CustomField>