unpackaged/main/default/objects/Product__c/fields/Suitability_Standards__c.field-meta.xml
<CustomField>
    <fullName>Suitability_Standards__c</fullName>
    <label>Suitability Standards</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accredited Investor</fullName>
            </value>
            <value>
                <fullName>Qualified Purchaser</fullName>
            </value>
            <value>
                <fullName>Qualified Client</fullName>
            </value>
            <value>
                <fullName>Qualified Investor</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>