unpackaged/main/default/objects/Product__c/fields/Syndicated_Loans__c.field-meta.xml
<CustomField>
    <fullName>Syndicated_Loans__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Syndicated Loans</label>
    <type>Checkbox</type>
</CustomField>