unpackaged/main/default/objects/Product__c/fields/Targeted_Asset_Class__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Asset_Class__c</fullName>
    <label>Targeted Asset Class</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Multifamily</fullName>
            </value>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Multi-Tenant Retail</fullName>
            </value>
            <value>
                <fullName>Single-Tenant Retail</fullName>
            </value>
            <value>
                <fullName>Hospitality</fullName>
            </value>
            <value>
                <fullName>Multi-Tenant Office</fullName>
            </value>
            <value>
                <fullName>Single-Tenant Office</fullName>
            </value>
            <value>
                <fullName>Self-Storage</fullName>
            </value>
            <value>
                <fullName>Seniors Housing</fullName>
            </value>
            <value>
                <fullName>Student Housing</fullName>
            </value>
            <value>
                <fullName>Single-Family Rental</fullName>
            </value>
            <value>
                <fullName>Manufactured Housing</fullName>
            </value>
            <value>
                <fullName>Land</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>