unpackaged/main/default/objects/Product__c/fields/Targeted_Distribution_Rate__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Distribution_Rate__c</fullName>
    <label>Targeted Distribution Rate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>