unpackaged/main/default/objects/Product__c/fields/Targeted_Distribution_Rate_Blank__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Distribution_Rate_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Targeted_Distribution_Rate__c)</formula>
    <label>Targeted Distribution Rate Blank</label>
    <type>Checkbox</type>
</CustomField>