unpackaged/main/default/objects/Product__c/fields/Targeted_Fund_Level_Leverage_Blank__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Fund_Level_Leverage_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Targeted_Fund_Level_Leverage__c)</formula>
    <label>Targeted Fund Level Leverage Blank</label>
    <type>Checkbox</type>
</CustomField>