unpackaged/main/default/objects/Product__c/fields/Targeted_MOIC__c.field-meta.xml
<CustomField>
    <fullName>Targeted_MOIC__c</fullName>
    <label>Targeted MOIC</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>