unpackaged/main/default/objects/Product__c/fields/Targeted_MOIC_Blank__c.field-meta.xml
<CustomField>
    <fullName>Targeted_MOIC_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Targeted_MOIC__c)</formula>
    <label>Targeted MOIC Blank</label>
    <type>Checkbox</type>
</CustomField>