unpackaged/main/default/objects/Product__c/fields/Targeted_Net_IRR__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Net_IRR__c</fullName>
    <label>Targeted Net IRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>