unpackaged/main/default/objects/Product__c/fields/Targeted_Net_IRR_Blank__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Net_IRR_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Targeted_Net_IRR__c)</formula>
    <label>Targeted Net IRR Blank</label>
    <type>Checkbox</type>
</CustomField>