unpackaged/main/default/objects/Product__c/fields/Targeted_Porfolio_Leverage__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Porfolio_Leverage__c</fullName>
    <label>Targeted Porfolio Leverage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>