unpackaged/main/default/objects/Product__c/fields/Targeted_Portfolio_Leverage_Blank__c.field-meta.xml
<CustomField>
    <fullName>Targeted_Portfolio_Leverage_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Targeted_Portfolio_Leverage__c)</formula>
    <label>Targeted Portfolio Leverage Blank</label>
    <type>Checkbox</type>
</CustomField>