unpackaged/main/default/objects/Product__c/fields/Tax_Opinion__c.field-meta.xml
<CustomField>
    <fullName>Tax_Opinion__c</fullName>
    <label>Tax Opinion</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Will</fullName>
            </value>
            <value>
                <fullName>Should</fullName>
            </value>
            <value>
                <fullName>Most Likely</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>