unpackaged/main/default/objects/Product__c/fields/Tax_Opinion_Blank__c.field-meta.xml
<CustomField>
    <fullName>Tax_Opinion_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Tax_Opinion__c))</formula>
    <label>Tax Opinion Blank</label>
    <type>Checkbox</type>
</CustomField>