unpackaged/main/default/objects/Product__c/fields/Tax_Reporting__c.field-meta.xml
<CustomField>
    <fullName>Tax_Reporting__c</fullName>
    <label>Tax Reporting</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>K-1</fullName>
            </value>
            <value>
                <fullName>1099</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>