unpackaged/main/default/objects/Product__c/fields/Tax_Reporting_Blank__c.field-meta.xml
<CustomField>
    <fullName>Tax_Reporting_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Tax_Reporting__c))</formula>
    <label>Tax Reporting Blank</label>
    <type>Checkbox</type>
</CustomField>