unpackaged/main/default/objects/Product__c/fields/Total_Upfront_Reserves__c.field-meta.xml
<CustomField>
    <fullName>Total_Upfront_Reserves__c</fullName>
    <label>Total Upfront Reserves</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>