unpackaged/main/default/objects/Product__c/fields/Total_Upfront_Reserves_Blank__c.field-meta.xml
<CustomField>
    <fullName>Total_Upfront_Reserves_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Total_Upfront_Reserves__c)</formula>
    <label>Total Upfront Reserves Blank</label>
    <type>Checkbox</type>
</CustomField>