unpackaged/main/default/objects/Product__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alternative Investment</fullName>
            </value>
            <value>
                <fullName>Mutual Fund</fullName>
            </value>
            <value>
                <fullName>529</fullName>
            </value>
            <value>
                <fullName>Variable Annuity</fullName>
            </value>
            <value>
                <fullName>Variable Life Insurance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>