unpackaged/main/default/objects/Product__c/fields/UBTI_for_Qualified_Accounts__c.field-meta.xml
<CustomField>
    <fullName>UBTI_for_Qualified_Accounts__c</fullName>
    <label>UBTI for Qualified Accounts</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>