unpackaged/main/default/objects/Product__c/fields/UBTI_for_Qualified_Accounts_Blank__c.field-meta.xml
<CustomField>
    <fullName>UBTI_for_Qualified_Accounts_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(UBTI_for_Qualified_Accounts__c))</formula>
    <label>UBTI for Qualified Accounts Blank</label>
    <type>Checkbox</type>
</CustomField>