unpackaged/main/default/objects/Product__c/fields/Upfront_Load_on_Equity__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Load_on_Equity__c</fullName>
    <label>Upfront Load on Equity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>