unpackaged/main/default/objects/Product__c/fields/Upfront_Load_on_Equity_Blank__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Load_on_Equity_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(Upfront_Load_on_Equity__c)</formula>
    <label>Upfront Load on Equity Blank</label>
    <type>Checkbox</type>
</CustomField>