unpackaged/main/default/objects/Product__c/fields/Valuation_Frequency_Blank__c.field-meta.xml
<CustomField>
    <fullName>Valuation_Frequency_Blank__c</fullName>
    <description>For Lightning Page for Advisors.</description>
    <formula>ISBLANK(TEXT(Valuation_Frequency__c))</formula>
    <label>Valuation Frequency Blank</label>
    <type>Checkbox</type>
</CustomField>