unpackaged/main/default/objects/Product__c/fields/Waterfall__c.field-meta.xml
<CustomField>
    <fullName>Waterfall__c</fullName>
    <label>Waterfall</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Return of capital</fullName>
            </value>
            <value>
                <fullName>Preferred return</fullName>
            </value>
            <value>
                <fullName>Manager catch-up</fullName>
            </value>
            <value>
                <fullName>Investor/manager split</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>