unpackaged/main/default/objects/Product__c/fields/Waterfall_Description__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Description__c</fullName>
    <label>Waterfall Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>