unpackaged/main/default/objects/Product__c/fields/Waterfall_Investor_Manager_Split__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Investor_Manager_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Investor/Manager Split</label>
    <type>Checkbox</type>
</CustomField>