unpackaged/main/default/objects/Product__c/fields/Waterfall_Manager_Catch_Up__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Manager_Catch_Up__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manager Catch-Up</label>
    <type>Checkbox</type>
</CustomField>