unpackaged/main/default/objects/Product__c/fields/Waterfall_Order_Ranked__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Order_Ranked__c</fullName>
    <label>Waterfall Order Ranked</label>
    <length>255</length>
    <type>Text</type>
</CustomField>