unpackaged/main/default/objects/Product__c/fields/Waterfall_Preferred_Return__c.field-meta.xml
<CustomField>
    <fullName>Waterfall_Preferred_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Preferred Return</label>
    <type>Checkbox</type>
</CustomField>